chore: Get Ideas for a campaign
